--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "oauth": "~0.9.14",
     "underscore": "~1.8.3",
     "q": "~1.4.1",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "redis": "~2.1.0"
   },
   "devDependencies": {
     "gulp": "^3.9.0"
