--- a/public/bower.json
+++ b/public/bower.json
@@ -13,7 +13,9 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-bootstrap": "^0.13.3",
-    "ngActivityIndicator": "^0.1.10"
+    "ngActivityIndicator": "^0.1.10",
+    "c3": "*",
+    "c3-angular": "*"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
